--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.21.0",
     "socket.io": "^4.8.0",
     "socket.io-client": "^4.8.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
